# multi-tool

./: CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_text.py
multitool/: web.py
scriptgui/: decorator.py  web.py
